# dispatcherV1

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  dispatcherV1  dispatcherV1.cpp  dispatcherV1.h  vcpkg.json
backend/apps/dispatcher_server/: CMakeLists.txt  SERVICE.md
backend/apps/dispatcher_server/src/: main.cpp
backend/libs/scada_alarms/: CMakeLists.txt  SERVICE.md
backend/libs/scada_alarms/include/scada_alarms/: alarm_ids.h  alarm_lifecycle.h  alarm_module.h  alarm_record.h  alarm_rule.h
backend/libs/scada_alarms/src/: alarm_lifecycle.cpp  alarm_module.cpp  alarm_record.cpp  alarm_rule.cpp
backend/libs/scada_api/: CMakeLists.txt  SERVICE.md
backend/libs/scada_api/include/scada_api/: api_endpoint.h  api_mapper.h  api_module.h  api_read_endpoint.h  api_response.h  api_route_registry.h  configuration_read_models.h  configuration_read_service.h
backend/libs/scada_api/src/: api_endpoint.cpp  api_mapper.cpp  api_module.cpp  api_read_endpoint.cpp  api_response.cpp  api_route_registry.cpp  configuration_read_models.cpp
backend/libs/scada_app/: CMakeLists.txt  SERVICE.md
backend/libs/scada_app/include/scada_app/: app_module.h  application_composition.h  development_configuration_read_service.h  gateway_startup.h
backend/libs/scada_app/src/: app_module.cpp  application_composition.cpp  development_configuration_read_service.cpp  gateway_startup.cpp
backend/libs/scada_common/: CMakeLists.txt  SERVICE.md
backend/libs/scada_common/include/scada_common/: audit_info.h  entity_id.h  error.h  id_types.h  lifecycle_state.h  result.h  timestamp.h  version.h
backend/libs/scada_common/src/: audit_info.cpp  entity_id.cpp  error.cpp  id_types.cpp  lifecycle_state.cpp  timestamp.cpp  version.cpp
backend/libs/scada_contracts/: CMakeLists.txt  SERVICE.md
backend/libs/scada_contracts/include/scada_contracts/: api_envelope.h
backend/libs/scada_contracts/src/: alarm_dto.cpp  api_envelope.cpp  device_dto.cpp  event_dto.cpp  historian_dto.cpp  object_dto.cpp  polling_dto.cpp  runtime_dto.cpp  tag_dto.cpp
backend/libs/scada_devices/: CMakeLists.txt  SERVICE.md
backend/libs/scada_devices/include/scada_devices/: device.h  device_connection.h  device_diagnostics.h  device_ids.h  device_module.h  device_protocol.h  device_state.h  device_validation.h
backend/libs/scada_devices/src/: device.cpp  device_connection.cpp  device_diagnostics.cpp  device_module.cpp  device_protocol.cpp  device_state.cpp  device_validation.cpp
backend/libs/scada_events/: CMakeLists.txt  SERVICE.md
backend/libs/scada_events/include/scada_events/: event_ids.h  event_module.h  event_record.h
backend/libs/scada_events/src/: event_module.cpp  event_record.cpp
backend/libs/scada_historian/: CMakeLists.txt  SERVICE.md
backend/libs/scada_historian/include/scada_historian/: archive_decision.h  historian_buffer.h  historian_module.h  history_batch.h  history_ids.h  history_query.h  history_sample.h
backend/libs/scada_historian/src/: archive_decision.cpp  historian_buffer.cpp  historian_module.cpp  history_batch.cpp  history_query.cpp  history_sample.cpp
backend/libs/scada_http/: CMakeLists.txt  SERVICE.md
backend/libs/scada_http/include/scada_http/: api_error.h  correlation_id.h  device_read_endpoint.h  drogon_http_server.h  http_module.h  http_query.h  http_router.h  http_types.h  json_value.h  object_read_endpoint.h  system_endpoint_registry.h  system_health_endpoint.h  system_modules_endpoint.h  tag_read_endpoint.h
backend/libs/scada_http/src/: api_error.cpp  correlation_id.cpp  device_read_endpoint.cpp  drogon_http_server.cpp  http_module.cpp  http_query.cpp  http_router.cpp  http_types.cpp  json_value.cpp  object_read_endpoint.cpp  system_endpoint_registry.cpp  system_health_endpoint.cpp  system_modules_endpoint.cpp  tag_read_endpoint.cpp
backend/libs/scada_objects/: CMakeLists.txt  SERVICE.md
backend/libs/scada_objects/include/scada_objects/: object_hierarchy_rules.h  object_ids.h  object_module.h  object_node.h  object_path.h  object_tree.h  object_type.h  responsibility_zone.h
backend/libs/scada_objects/src/: object_hierarchy_rules.cpp  object_module.cpp  object_node.cpp  object_path.cpp  object_tree.cpp  object_type.cpp  responsibility_zone.cpp
backend/libs/scada_polling/: CMakeLists.txt  SERVICE.md
backend/libs/scada_polling/include/scada_polling/: polling_execution.h  polling_group.h  polling_group_mode.h  (+5 more)
backend/libs/scada_polling/src/: polling_execution.cpp  polling_group.cpp  polling_group_mode.cpp  polling_module.cpp  polling_scheduler.cpp  polling_task.cpp  polling_task_state.cpp
backend/libs/scada_protocols/: CMakeLists.txt  SERVICE.md
backend/libs/scada_protocols/src/: protocol_capabilities.cpp  protocol_driver_registry.cpp  protocol_module.cpp  protocol_requests.cpp  protocol_results.cpp  simulator_protocol_driver.cpp
backend/libs/scada_realtime/: CMakeLists.txt  SERVICE.md
backend/libs/scada_realtime/src/: realtime_message.cpp  realtime_module.cpp  realtime_subscription.cpp
backend/libs/scada_runtime/: CMakeLists.txt  SERVICE.md
backend/libs/scada_runtime/src/: engineering_transform.cpp  runtime_event.cpp  runtime_module.cpp  runtime_quality.cpp  runtime_value_applier.cpp  runtime_value_change.cpp  runtime_value_conversion.cpp  tag_value_store.cpp
backend/libs/scada_tags/: CMakeLists.txt  SERVICE.md
backend/libs/scada_tags/src/: tag.cpp  tag_address.cpp  tag_archive_policy.cpp  tag_current_value.cpp  tag_module.cpp  tag_quality.cpp  tag_type.cpp  tag_validation.cpp  tag_value_type.cpp
tests/backend/scada_api/: CMakeLists.txt  configuration_read_models_tests.cpp
tests/backend/scada_app/: CMakeLists.txt  development_configuration_read_service_tests.cpp
tests/backend/scada_common/: CMakeLists.txt  version_tests.cpp
tests/backend/scada_http/: CMakeLists.txt  api_error_tests.cpp  correlation_id_tests.cpp  device_read_endpoint_tests.cpp  http_query_tests.cpp  http_router_tests.cpp  http_types_tests.cpp  json_value_tests.cpp  object_read_endpoint_tests.cpp  system_endpoint_tests.cpp  tag_read_endpoint_tests.cpp
(+208 files in other folders)
